--- a/src/app/pages/tablinks/tablinks.page.html
+++ b/src/app/pages/tablinks/tablinks.page.html
@@ -2,7 +2,7 @@
   <ion-tabs>
 
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="progress">
+      <ion-tab-button tab="progress" (click)="handleTabClick($event)">
         <ion-icon name="home"></ion-icon>
         <ion-label>Route</ion-label>
       </ion-tab-button>
