Fixing build erros in templates; adding index.md

--- a/src/app/pages/landmark/landmark.page.html
+++ b/src/app/pages/landmark/landmark.page.html
@@ -10,5 +10,5 @@
 <ion-content>
 Landmark detail page
 <h3>{{landmark.name}}</h3>
-<p>{{landmark.desription}}</p>
+<p>{{landmark.description}}</p>
 </ion-content>
