--- a/src/app/pages/progress/progress.page.html
+++ b/src/app/pages/progress/progress.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <div>
-    <span *ngIf="this.finished"><h3>You finished {{route.name}}<br>Kick back and celebrate.</h3>
+    <span *ngIf="this.finished"><h3>You finished PUT ROUTE NAME HERE<br>Kick back and celebrate.</h3>
         <p><b>Distance logged:</b>{{distanceLogged | number: '1.0-2'}}</p>
         <p><b>Percent complete:</b> 100%</p>
     </span>
