--- a/src/app/pages/landmark/landmark.page.html
+++ b/src/app/pages/landmark/landmark.page.html
@@ -3,12 +3,14 @@
       <ion-buttons slot="start">
         <ion-back-button></ion-back-button>
       </ion-buttons>
-    <ion-title>landmark</ion-title>
+    <ion-title>Landmark Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-Landmark detail page
-<h3>{{landmark.name}}</h3>
-<p>{{landmark.description}}</p>
+  <ion-card>
+    <img src="{{landmark.image}}">
+    <ion-card-title>{{landmark.name}}</ion-card-title>
+    <ion-card-content>{{landmark.description}}</ion-card-content>
+  </ion-card>
 </ion-content>
