Changing runlog input mode to decimal

--- a/src/app/pages/runlog/runlog.page.html
+++ b/src/app/pages/runlog/runlog.page.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item>
       <ion-label position="floating">Distance</ion-label>
-      <ion-input type="text" formControlName="newRunDistanceCtrl" placeholder="e.g. 2.25" required></ion-input>
+      <ion-input type="text" inputmode="decimal" formControlName="newRunDistanceCtrl" placeholder="e.g. 2.25" required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Date</ion-label>
