--- a/src/app/pages/tablinks/tablinks.page.html
+++ b/src/app/pages/tablinks/tablinks.page.html
@@ -1,8 +1,8 @@
 <ion-content>
-  <ion-tabs>
+  <ion-tabs (ionChange)="tabChanged($event)">
 
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="progress" (click)="handleTabClick($event)">
+      <ion-tab-button tab="progress" (click)="handleTabClick('progress', $event)">
         <ion-icon name="home"></ion-icon>
         <ion-label>Route</ion-label>
       </ion-tab-button>
