--- a/src/app/pages/tablinks/tablinks.page.html
+++ b/src/app/pages/tablinks/tablinks.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-tabs (ionChange)="tabChanged($event)">
+  <ion-tabs>
 
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="progress">
