--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,9 @@ ion-card-title, ion-card-subtitle {
     margin-left: 10px;
     padding: 5px;
 }
+
+.container {
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px;
+}
