centering page header text

--- a/src/app/pages/landmark/landmark.page.html
+++ b/src/app/pages/landmark/landmark.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
         <ion-back-button></ion-back-button>
       </ion-buttons>
-    <ion-title>Landmark Details</ion-title>
+    <ion-title class="ion-text-center">Landmark Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
