--- a/src/app/pages/progress/progress.page.html
+++ b/src/app/pages/progress/progress.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Route Progress</ion-title>
+    <ion-title class="ion-text-center">Route Progress</ion-title>
   </ion-toolbar>
 </ion-header>
 
