--- a/src/app/pages/landmark-list/landmark-list.page.html
+++ b/src/app/pages/landmark-list/landmark-list.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Landmarks</ion-title>
+    <ion-title class="ion-text-center">Landmarks</ion-title>
   </ion-toolbar>
 </ion-header>
 
