--- a/src/app/pages/runlog/runlog.page.html
+++ b/src/app/pages/runlog/runlog.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Run Log</ion-title>
+    <ion-title class="ion-text-center">Run Log</ion-title>
   </ion-toolbar>
 </ion-header>
 
