--- a/src/app/pages/landmark-list/landmark-list.page.html
+++ b/src/app/pages/landmark-list/landmark-list.page.html
@@ -13,6 +13,7 @@
   <div>
     <ion-card *ngFor="let landmark of landmarksList">
       <img src="{{landmark.image}}">
+      <p>Image by <a href="landmark.img_att_link">{{landmark.image_attribute}}</a></p>
       <ion-card-title>{{landmark.name}}</ion-card-title>
       <ion-card-subtitle>{{landmark.mile == 0 ? 'Start' : landmark.mile + ' Miles'}}</ion-card-subtitle>
       <ion-card-content>{{landmark.description.substring(0,50) + '...'}}</ion-card-content>
