--- a/src/app/pages/landmark-list/landmark-list.page.html
+++ b/src/app/pages/landmark-list/landmark-list.page.html
@@ -12,12 +12,16 @@
   <hr>
   <div>
     <ion-card *ngFor="let landmark of landmarksList">
-      <img src="{{landmark.image}}">
-      <p>Image by <a href="landmark.img_att_link">{{landmark.image_attribute}}</a></p>
-      <ion-card-title>{{landmark.name}}</ion-card-title>
-      <ion-card-subtitle>{{landmark.mile == 0 ? 'Start' : landmark.mile + ' Miles'}}</ion-card-subtitle>
-      <ion-card-content>{{landmark.description.substring(0,50) + '...'}}</ion-card-content>
-      <ion-button [routerLink]="['./landmark', landmark.id]">See Details</ion-button>
+        <div class="card-image">
+          <img src="{{landmark.image}}">        
+          <p>Image: <a href="landmark.img_att_link">{{landmark.image_attribute}}</a></p>
+        </div>
+        <div class="card-elements-container">
+          <ion-card-title>{{landmark.name}}</ion-card-title>
+          <ion-card-subtitle>{{landmark.mile == 0 ? 'Start' : landmark.mile + ' Miles'}}</ion-card-subtitle>
+          <ion-card-content>{{landmark.description.substring(0,50) + '...'}}</ion-card-content>
+          <ion-button [routerLink]="['./landmark', landmark.id]">See Details</ion-button>
+        </div>
     </ion-card>
   </div>
 </ion-content>
