--- a/src/app/pages/landmark/landmark.page.html
+++ b/src/app/pages/landmark/landmark.page.html
@@ -9,8 +9,13 @@
 
 <ion-content>
   <ion-card>
-    <img src="{{landmark.image}}">
-    <ion-card-title>{{landmark.name}}</ion-card-title>
-    <ion-card-content>{{landmark.description}}</ion-card-content>
+    <div class="card-image">
+      <img src="{{landmark.image}}">
+      <p>Image: <a href="landmark.img_att_link">{{landmark.image_attribute}}</a></p>
+    </div>
+    <div class="card-elements-container">
+      <ion-card-title>{{landmark.name}}</ion-card-title>
+      <ion-card-content>{{landmark.description}}</ion-card-content>
+    </div>
   </ion-card>
 </ion-content>
