Updating tablinks route path; updating route and run log icons

--- a/src/app/pages/tablinks/tablinks.page.html
+++ b/src/app/pages/tablinks/tablinks.page.html
@@ -3,12 +3,12 @@
 
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="progress">
-        <ion-icon name="home"></ion-icon>
+        <ion-icon name="map-outline"></ion-icon>
         <ion-label>Route</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="runlog">
-        <ion-icon name="walk"></ion-icon>
+        <ion-icon name="list-outline"></ion-icon>
         <ion-label>Run Log</ion-label>
       </ion-tab-button>
 
