fixing image attribution links

--- a/src/app/pages/landmark/landmark.page.html
+++ b/src/app/pages/landmark/landmark.page.html
@@ -11,7 +11,7 @@
   <ion-card>
     <div class="card-image">
       <img src="{{landmark.image}}">
-      <p>Image: <a href="landmark.img_att_link">{{landmark.image_attribute}}</a></p>
+      <p>Image: <a href="{{landmark.img_att_link}}">{{landmark.image_attribute}}</a></p>
     </div>
     <div class="card-elements-container">
       <ion-card-title>{{landmark.name}}</ion-card-title>
