--- a/src/app/pages/landmark-list/landmark-list.page.html
+++ b/src/app/pages/landmark-list/landmark-list.page.html
@@ -14,7 +14,7 @@
     <ion-card *ngFor="let landmark of landmarksList">
         <div class="card-image">
           <img src="{{landmark.image}}">        
-          <p>Image: <a href="landmark.img_att_link">{{landmark.image_attribute}}</a></p>
+          <p>Image: <a href="{{landmark.img_att_link}}">{{landmark.image_attribute}}</a></p>
         </div>
         <div class="card-elements-container">
           <ion-card-title>{{landmark.name}}</ion-card-title>
