Adding route service, migrating references from route interface to service

--- a/src/app/pages/route-select/route-select.page.html
+++ b/src/app/pages/route-select/route-select.page.html
@@ -23,7 +23,7 @@
       <ion-card-content>
         {{route.description}} 
         <div>
-          <ion-button routerLink="/tablinks" (click)="startRoute(route.id, route.name, route.length)">Start this route</ion-button>
+          <ion-button routerLink="/tablinks" (click)="startRoute(route)">Start this route</ion-button>
         </div>
       </ion-card-content>
 
